--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
                             Resources
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/highlights.html#ramadan">Ramadan</a></li>
-                            <li><a class="dropdown-item" href="/highlights.html#hajj">Hajj & Umrah</a></li>
-                            <li><a class="dropdown-item" href="/highlights.html#zakat">Zakat</a></li>
-                            <li><a class="dropdown-item" href="#knowledge">Knowledge</a></li>
-                            <li><a class="dropdown-item" href="#multimedia">Multimedia</a></li>
+                            <li><a class="dropdown-item" href="highlights.html#ramadan">Ramadan</a></li>
+                            <li><a class="dropdown-item" href="highlights.html#hajj">Hajj & Umrah</a></li>
+                            <li><a class="dropdown-item" href="highlights.html#zakat">Zakat</a></li>
+                            
                         </ul>
                     </li>
                     <li class="nav-item">
