--- a/highlights.html
+++ b/highlights.html
@@ -186,8 +186,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="highlights.html">Highlights</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="resourcesDropdown" role="button"
+                            data-bs-toggle="dropdown">
+                            Resources
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#ramadan">Ramadan</a></li>
+                            <li><a class="dropdown-item" href="#hajj">Hajj & Umrah</a></li>
+                            <li><a class="dropdown-item" href="#zakat">Zakat</a></li>
+                            
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#prayer-times">Prayer Times</a>
