--- a/surah.html
+++ b/surah.html
@@ -128,6 +128,7 @@
             margin-bottom: 0.75rem;
             font-family: 'Amiri', serif;
             letter-spacing: -0.02em;
+            color: #e2e8f0;
         }
 
         .surah-info {
@@ -138,6 +139,7 @@
             flex-wrap: wrap;
             font-size: 1rem;
             opacity: 0.95;
+            color: #e2e8f0;
         }
 
         .surah-info-badge {
@@ -147,6 +149,7 @@
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
             font-size: 0.9rem;
+            color: #e2e8f0;
         }
 
         /* Controls Bar */
